# Wustite

./: .gitignore  Cargo.toml  Makefile  README.md  bochs.cfg  bootloader.s  build.sh  gdt.s  i686-none-eabi.json  long-mode.s  run.sh  secondary.asm  stage1-util.s  stage1.s  stage2.s  test.txt  util.s  windows_create_disk.py  x86_64-none-eabi.json  x86_64-wustite-kernel.json
bin-tools/: Cargo.toml
block-device/: Cargo.toml
boot-sector/: boot-sector.asm
bootloader/: Cargo.toml  build.rs  linker.ld  target.json
bootloader-uefi/: Cargo.toml  build.rs
docs/: interrupt_assignment.md
dumpe4fs/: Cargo.toml
ext4-core/: Cargo.toml  ext4-command.sh
fat32-core/: Cargo.toml  test-with-a-longer-name.txt
gpt-reader/: Cargo.toml
kernel/: Cargo.toml  build.rs  link.x  linker.ld
kernel/.cargo/: config
kernel/src/: entry.rs  gdt.rs  interrupts.rs  lib.rs  main.rs
kernel/src/acpi/: devices.rs  handlers.rs  mod.rs
kernel/src/allocator/: mod.rs
kernel/src/arch/x86/: mod.rs
kernel/src/cmos/: mod.rs
kernel/src/drivers/: mod.rs  register.rs
kernel/src/drivers/ata/: mod.rs
kernel/src/drivers/cmos/: mod.rs
kernel/src/drivers/ide/: mod.rs
kernel/src/drivers/input/: mod.rs  ps2_keyboard.rs
kernel/src/drivers/keyboard/: mod.rs
kernel/src/drivers/nvme/: commands.rs  mod.rs
kernel/src/drivers/pci/: device.rs  headers.rs  mod.rs  subsystem.rs
kernel/src/drivers/serial/: mod.rs
kernel/src/drivers/video/: mod.rs
kernel/src/drivers/video/svga/: mod.rs
kernel/src/drivers/video/svga/vmware_svga_2/: mod.rs
kernel/src/drivers/video/vga/: mod.rs
kernel/src/drivers/video/vga/graphics/: font.rs  mod.rs
kernel/src/drivers/video/vga/text/: mod.rs
kernel/src/entry/: memory.rs  mod.rs  start.rs
kernel/src/interrupts/: gsi.rs  handlers.rs  io_apic.rs  legacy.rs  local_apic.rs  logical.rs  mod.rs  vectors.rs  virtual_irq.rs
kernel/src/memory/: mod.rs
kernel/src/resource/: mod.rs
kernel/src/resource/ports/: mod.rs
kernel/src/state/: mod.rs  timer.rs
loader/: Cargo.toml  link.x  target.json
mock-vfat32-driver/: Cargo.toml
modules/ide_driver/: Cargo.toml  build.rs
modules/ide_driver/src/: lib.rs
toolchain/: config.mk  (+1 more)
(+93 files in other folders)
