[workspace]
members = ["bootloader", "bootloader-uefi", "kernel", "common", "ext4-core"]
exclude = ["modules/"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# https://github.com/rust-lang/rust/issues/112245#issuecomment-1575052849
# https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
# ^ otherwise would enable lto here
[profile.dev.package.bootloader-uefi]
opt-level = 3
strip = true
codegen-units = 1

[profile.release.package.bootloader-uefi]
opt-level = 3
strip = true
codegen-units = 1

[profile.dev.package.kernel]
opt-level = "z"
strip = true
codegen-units = 1

[profile.release.package.kernel]
opt-level = "z"
strip = true
codegen-units = 1
