[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile = "0.4.5"
spin = "0.5.2"
x86_64 = "0.14.10"
raw-cpuid = "10.6.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"
strip = true

[profile.release]
panic = "abort"
strip = true
