[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
volatile = "0.4.5"
spin = "0.9.8"
x86_64 = "0.14.10"
raw-cpuid = "10.6.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
