[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
volatile = "0.6"
spin = "0.10"
x86_64 = "0.15"
raw-cpuid = "11.5"
pic8259 = "0.11"
pc-keyboard = "0.8"
linked_list_allocator = "0.10"

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]
