[package]
name = "ide_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
modules_common = { path = "../modules_common" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
